# ZenithEngine

./: CMakeLists.txt  README.md  imgui.ini  libs.txt  world.zen  world2.zen
assets/textures/: stone_wall_04_nor_gl_1k.exr  stone_wall_04_rough_1k.exr
cmake/: ZenithEngineConfig.cmake.in
docs/: creating_object.md  creating_shader.md
examples/: CMakeLists.txt  example-0.cpp  example-1.cpp
include/ZenithEngine/core/: camera.h  resource_manager.h  shader.h  texture.h  window.h
include/ZenithEngine/libs/glad/: glad.h
include/ZenithEngine/math/: AABB.h  raycast.h
include/ZenithEngine/mesh/: cube.h  framebuffer.h  mesh.h  rectangle.h  skybox.h  triangle.h
include/core/: shader.h  window.h
include/libs/stb/: stb_image.h
include/mesh/: framebuffer.h  mesh.h  triangle.h
shaders/: frag.glsl  screen_frag.glsl  screen_vert.glsl  skybox_frag.glsl  skybox_vert.glsl  vert.glsl
src/: main.cpp
src/core/: camera.cpp  shader.cpp  texture.cpp  window.cpp
src/libs/glad/: glad.c
src/libs/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
src/libs/stb/: stb.cpp
src/math/: raycast.cpp
src/mesh/: cube.cpp  framebuffer.cpp  mesh.cpp  rectangle.cpp  skybox.cpp  triangle.cpp
